adding Tomas to the authors.

--- a/plugins/lorawan/AUTHORS
+++ b/plugins/lorawan/AUTHORS
@@ -1,5 +1,6 @@
-Authors:
+Authors, in alphabetical order:
 Dominique Barthel (dominique.barthel [at] orange.com)
 Leo Gaspard (leo [at] gaspard.io)
+Tomàs Lagos (tomas.lagos [at] mail.udp.cl)
 Quentin Lampin (quentin.lampin [at] orange.com)
 Laurent Toutain (Laurent [at] touta.in)
